--- a/public/static/css/style.css
+++ b/public/static/css/style.css
@@ -7,7 +7,7 @@
 
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background: url('../images/bg.gif') center center fixed;
+    background: url('../images/001.webp') center center fixed;
     background-size: cover;
     min-height: 100vh;
     color: #333;
